Manifest files/wpdb-deploy-with-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpressdb-deployment
  labels:
    app: wordpressdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpressdb
  template:
    metadata:
      labels:
        app: wordpressdb
    spec:
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-data
      containers:
      - name: wordpressdb
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: mysql-data
          subPath: mysql
