Manifest files/wpdb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpressdb-deployment
  labels:
    app: wordpressdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpressdb
  template:
    metadata:
      labels:
        app: wordpressdb
    spec:
      containers:
      - name: wordpressdb
        image: mysql:5.7
        ports:
        - containerPort: 3306
