Manifest files/wp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-service
spec:
  type: LoadBalancer
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
