Manifest files/wpdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wpdb-service
spec:
  type: ClusterIP
  selector:
    app: wordpressdb
  ports:
    - port: 3306
      targetPort: 3306
