Manifest files/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: wp-service
          servicePort: 80
      - path: /docs
        backend:
          serviceName: wp-service
          servicePort: 80
      - path: /payments
        backend:
          serviceName: paytm-service
          servicePort: 80
    host: k8s.devopsdoor.com
